--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -38,7 +38,7 @@
         app:layout_constraintVertical_bias="0.035" />
 
     <RadioGroup
-        android:id="@+id/radio_group"
+        android:id="@+id/levels"
         android:layout_width="332dp"
         android:layout_height="145dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,7 +50,7 @@
 
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/easyLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/galindo"
@@ -61,7 +61,7 @@
             android:textSize="24sp" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/mediumLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/galindo"
@@ -71,7 +71,7 @@
             android:textSize="24sp" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/hardLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/galindo"
@@ -83,7 +83,7 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/difficultyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/galindo"
@@ -98,7 +98,7 @@
         app:layout_constraintVertical_bias="0.176" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/spriteText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/galindo"
@@ -124,12 +124,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/spriteText"
         app:layout_constraintVertical_bias="0.97" />
 
     <RadioGroup
         android:layout_width="406dp"
-
         android:layout_height="164dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
