--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -9,8 +9,8 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/entered_name"
-        android:layout_width="323dp"
-        android:layout_height="63dp"
+        android:layout_width="325dp"
+        android:layout_height="57dp"
         android:fontFamily="@font/galindo"
         android:hint="Your Name"
         android:textAlignment="center"
@@ -21,8 +21,10 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.448"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.069" />
 
     <RadioGroup
         android:id="@+id/levels"
