--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -13,13 +13,15 @@
         android:layout_height="57dp"
         android:fontFamily="@font/galindo"
         android:hint="Your Name"
+        android:imeOptions="actionDone"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="#8BC34A"
         android:textColorHighlight="#F6F2F2"
         android:textColorHint="#FFFFFF"
         android:textColorLink="#FFFFFF"
         android:textSize="24sp"
-        android:inputType="text"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.465"
@@ -170,10 +172,9 @@
         android:id="@+id/config_page_alert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below = "@+id/start_game"
+        android:layout_below="@+id/start_game"
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
-        android:visibility="invisible"
-        />
+        android:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
