changed font in gamepage for design view to work

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -33,7 +33,7 @@
         android:id="@+id/num_coins"
         android:layout_width="20dp"
         android:layout_height="43dp"
-        android:fontFamily="@font/galindo"
+        android:fontFamily="sans-serif-thin"
         android:text="0"
         android:textAlignment="center"
         android:textColor="#F3EFEF"
@@ -49,7 +49,7 @@
         android:id="@+id/player_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/galindo"
+        android:fontFamily="sans-serif-thin"
         android:textColor="#F4F1F1"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +63,7 @@
         android:id="@+id/num_lifes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/galindo"
+        android:fontFamily="sans-serif-thin"
         android:textColor="#FDFCFC"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +77,7 @@
         android:id="@+id/player_difficult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/galindo"
+        android:fontFamily="sans-serif-thin"
         android:textColor="#FDFCFC"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
