changed font & increased speed of movement.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:fontFamily="sans-serif-thin"
+        android:fontFamily="@font/galindo"
         android:rotation="0"
         android:rotationX="-2"
         android:rotationY="0"
@@ -41,7 +41,7 @@
         android:layout_height="50dp"
         android:background="@color/white"
         android:backgroundTint="#0FBC54"
-        android:fontFamily="sans-serif-thin"
+        android:fontFamily="@font/galindo"
         android:onClick="toConfigPage"
         android:text="@string/play"
         android:textColor="#FFFFFF"
@@ -58,7 +58,7 @@
         android:layout_height="40dp"
         android:background="@color/red"
         android:backgroundTint="@color/red"
-        android:fontFamily="sans-serif-thin"
+        android:fontFamily="@font/galindo"
         android:onClick="exitApp"
         android:text="@string/exit"
         android:textColor="#FFFFFF"
