--- a/app/src/main/res/layout/exit_page.xml
+++ b/app/src/main/res/layout/exit_page.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#2C2F31">
 
-    <EditText
+    <TextView
         android:id="@+id/editTextTextPersonName"
         android:layout_width="366dp"
         android:layout_height="62dp"
@@ -99,7 +99,7 @@
         app:layout_constraintVertical_bias="0.304"
         app:srcCompat="@drawable/grass_2" />
 
-    <EditText
+    <TextView
         android:id="@+id/player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
